--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ license = "MIT or Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.93"
+bytes = "1.8.0"
 enum_dispatch = "0.3.13"
+thiserror = "2.0.3"
