--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ license = "MIT or Apache-2.0"
 [dependencies]
 anyhow = "1.0.93"
 bytes = "1.8.0"
+dashmap = "6.1.0"
 enum_dispatch = "0.3.13"
+lazy_static = "1.5.0"
 thiserror = "2.0.3"
